# ophackbot

./: .gitignore  AGENTS.md  LICENSE  PROMPT_FOR_AGENTS.md  PROMPT_PARA_OUTRA_IA.md  README.md  WORKSPACE_STATE.md  hackbot.cmd  hackbot.ps1  pyproject.toml  requirements.in
.cursor/rules/: git-auto-push.mdc
.github/workflows/: ci.yml
bounty_knowledge/: BUGBOUNTY_STUDY_GUIDE.md  BUGCROWD.md  LESSONS_MOBILE_API_AUTH.md  README.md  TOOLCHAIN.md
bounty_knowledge/study_notes/: INDEX.md  STUDY_MATERIAL_ROUTING.md
bounty_knowledge/techniques/: HUNTING_GRPC_WEB_PWND.md
configs/: hackbot.example.yaml
docs/: CLI.md  INSTALL_LINUX.md  INSTALL_WINDOWS.md  OPERATING_RULES.md  SAFETY_MODEL.md  TOAD.md  WORKFLOW_HARNESS.md
hackbot/: __init__.py  accounts.py  acp_agent.py  agent.py  ai_payloads.py  ai_target.py  api_ai_tool_specs.py  api_rank.py  audit.py  auth_continuity.py  boolparse.py  campaign.py  capabilities.py  chain_builder.py  cli.py  clipboard.py  codex_backend.py  config.py  coverage_map.py  cursor_backend.py  cursor_bridge_win.py  cursor_models.py  cursor_tools.py  demo.py  diffing.py  elite_dispatch.py  evidence.py  fileutil.py  findings.py  force.py  fp_signatures.py  hunt_controller.py  hunt_jar.py  hunt_memory.py  hunt_phases.py  hunt_resume.py  hunt_telemetry.py  identity.py  image_read.py  intent.py  (+41 more)
hackbot/reporting/: __init__.py  bugcrowd.py  generic.py  hackerone.py  intigriti.py
hackbot/runners/: __init__.py  advanced_http.py  ai_probes.py  api_probes.py  base.py  browser.py  brute_login.py  burp.py  content_discovery.py  curl_request.py  elite_probes.py  extract_page.py  frida_runner.py  graphql_probe.py  har_import.py  hexstrike.py  http_request.py  idor_probe.py  js_analyze.py  jwt_analyze.py  lab_stack.py  lfi_probe.py  mobile.py  mobsf.py  oauth_jwt.py  param_mine.py  projectdiscovery.py  race_probe.py  rate_probe.py  reconftw.py  second_order_xss.py  secrets_scan.py  session_bootstrap.py  sqli_probe.py  ssrf_probe.py  ssti_probe.py  web_probes.py  websocket_probe.py  xss_probe.py  xxe_probe.py
hackbot/tui/: __init__.py  app.py  boot.py  chat.py  composer.py  run_block.py  theme.py  widgets.py
hackbot/web_static/: app.js  index.html
integrations/hexstrike/: Dockerfile  PROVENANCE.md  docker-compose.yml  hexstrike_server.py  requirements.lock.README.md
integrations/toad/: hackbot.toml
scripts/: import_knowledge_sources.sh
targets/demo/: DEMO.md  FINDINGS.md  PLAN.md  RESUME.md  SCOPE.md
templates/reports/: bugcrowd.md  generic.md  (+2 more)
tests/: conftest.py  test_acp_agent.py  test_advanced_wave.py  test_agent_chat.py  test_ai_security_pack.py  test_api_ai_gaps.py  test_audit_fixes.py  test_auth_continuity.py  test_autonomy_leap.py  test_bounty_toolkit.py  test_browser_burp_learn.py  test_campaign.py  test_capabilities.py  test_clipboard.py  test_codex_file_create.py  test_codex_stream.py  test_codex_tools.py  test_create_file_nl.py  test_cursor_backend.py  test_cursor_bridge_win.py  test_cursor_models.py  test_cursor_tools.py  test_derived_assets_scope.py  test_diffing.py  test_extract_page.py  test_findings.py  test_force.py  test_http_tool_result.py  test_hunt_auth_wave2.py  test_hunt_autonomous.py  test_hunt_idor.py  test_hunt_sprint.py  test_hunt_wave3.py  test_identity.py  test_intent.py  test_interactsh_burp.py  test_knowledge.py  test_local_agent_attack.py  test_model_catalog.py  test_nl_sessions_images.py  (+43 more)
web/: README.md  THIRD_PARTY.md  app.css  index.html
(+52 files in other folders)
