[project]
name = "hackbot-kit"
version = "0.1.0"
description = "Authorized bug bounty and lab automation kit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.7",
    "prompt_toolkit>=3.0",
    "pyyaml>=6.0",
    "playwright>=1.40",
    "cryptography>=42.0",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.40",
]
mobile = [
    "frida-tools>=12.0",
]
oob = [
    "cryptography>=42.0",
]
cursor = [
    "cursor-sdk>=0.1.0",
]
acp = [
    "agent-client-protocol>=0.11",
]
tui = [
    "textual>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[project.scripts]
hackbot = "hackbot.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["hackbot*"]

[tool.setuptools.package-data]
hackbot = ["py.typed", "runners/frida_scripts/*.js", "web_static/*"]
